[gd_scene load_steps=11 format=2]

[ext_resource path="res://Demo_Area2D_Detection_Object_Layer_Mask_Match.gd" type="Script" id=1]
[ext_resource path="res://item-gold-48x48-192x192-0002.png" type="Texture" id=2]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 32, 32 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 2 )
region = Rect2( 0, 192, 192, 192 )

[sub_resource type="SpriteFrames" id=4]
animations = [ {
"frames": [ SubResource( 3 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 64, 64 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 32, 32 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 2 )
region = Rect2( 0, 192, 192, 192 )

[sub_resource type="SpriteFrames" id=8]
animations = [ {
"frames": [ SubResource( 7 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 64, 64 )

[node name="Demo_Area2D_Detection_Object_Layer_Mask_Match" type="Node2D"]
script = ExtResource( 1 )

[node name="Group1" type="Node2D" parent="."]

[node name="Character_LayerSet_MaskUnset" type="KinematicBody2D" parent="Group1"]
position = Vector2( 128, 256 )
collision_mask = 0
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Group1/Character_LayerSet_MaskUnset"]
shape = SubResource( 2 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="Group1/Character_LayerSet_MaskUnset"]
frames = SubResource( 4 )

[node name="Detector" type="Area2D" parent="Group1"]
position = Vector2( 256, 256 )
collision_layer = 0
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Group1/Detector"]
shape = SubResource( 1 )

[node name="ColorRect" type="ColorRect" parent="Group1/Detector"]
margin_left = -64.0
margin_top = -64.0
margin_right = 64.0
margin_bottom = 64.0
color = Color( 0.501961, 0.501961, 1, 0.752941 )

[node name="DetectionTimer" type="Timer" parent="Group1"]
wait_time = 2.0
autostart = true

[node name="Tween" type="Tween" parent="Group1"]

[node name="Group2" type="Node2D" parent="."]

[node name="Character_LayerUnset_MaskSet" type="KinematicBody2D" parent="Group2"]
position = Vector2( 384, 256 )
collision_layer = 0
collision_mask = 8
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Group2/Character_LayerUnset_MaskSet"]
shape = SubResource( 5 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="Group2/Character_LayerUnset_MaskSet"]
frames = SubResource( 8 )

[node name="Detector" type="Area2D" parent="Group2"]
position = Vector2( 512, 256 )
collision_layer = 8
collision_mask = 0
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Group2/Detector"]
shape = SubResource( 6 )

[node name="ColorRect" type="ColorRect" parent="Group2/Detector"]
margin_left = -64.0
margin_top = -64.0
margin_right = 64.0
margin_bottom = 64.0
color = Color( 1, 0.501961, 0.501961, 0.752941 )

[node name="DetectionTimer" type="Timer" parent="Group2"]
wait_time = 2.0
autostart = true

[node name="Tween" type="Tween" parent="Group2"]

[connection signal="body_entered" from="Group1/Detector" to="." method="_on_Detector1_body_entered"]
[connection signal="timeout" from="Group1/DetectionTimer" to="." method="_on_DetectionTimer1_timeout"]
[connection signal="body_entered" from="Group2/Detector" to="." method="_on_Detector2_body_entered"]
[connection signal="timeout" from="Group2/DetectionTimer" to="." method="_on_DetectionTimer2_timeout"]
